--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -517,3 +517,29 @@ body {
   color: white !important;
   background-color: #30b0ff !important;
 }
+
+.pricing-nav-btn-grp {
+  background-color: #EBEFF0;
+  border-radius: 50px;
+  padding: 10px;
+  width: fit-content;
+}
+
+.pricing-nav {
+  color: #30b0ff !important;
+  background-color: transparent !important;
+  border-radius: 50px;
+  padding: 10px 20px;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.pricing-nav.active {
+  color: white !important;
+  background-color: #30b0ff !important;
+}
+
+.pricing-nav:hover {
+  color: white !important;
+  background-color: #30b0ff !important;
+}
