Update pricing card

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -543,3 +543,7 @@ body {
   color: white !important;
   background-color: #30b0ff !important;
 }
+
+.pricing-card-bg {
+  background-color: #EBEFF0;
+}
